read graphic, add some windows creating scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,41 @@
     "C_Cpp.default.compilerPath": "C:\\office_software\\mingw64\\bin\\clang.exe", // 格式化时调整include的顺序（按字母排序）
     "clangd.fallbackFlags": [
         // 增加项目自身头文件依赖path，因为使用vs2019编译不会生成compile_command.json文件，项目自己的头文件就不会找到
-        "-I${workspaceFolder}/Framework/Interface" // 项目根目录
+        "-I${workspaceFolder}/Framework/Interface", // 项目根目录
+        "-I${workspaceFolder}/Framework/Common", // 项目根目录
+        // // VC_includePath
+        // "-ID:/Visual_Studio_IDE/VC/Tools/MSVC/14.33.31629/include",
+        // "-ID:/Visual_Studio_IDE/VC/Tools/MSVC/14.33.31629/atlmfc/include",
+        // "-ID:/Visual_Studio_IDE/VC/Auxiliary/VS/include",
+        // "-ID:/Visual_Studio_IDE/VC/Auxiliary/VS/UnitTest/include",
+        // // WindowsSDK_IncludePath
+        // "-IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/ucrt",
+        // "-IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/um",
+        // "-IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/shared",
+        // "-IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/winrt",
+        // "-IC:/Program Files (x86)/Windows Kits/10/Include/10.0.19041.0/cppwinrt",
+        // "-IC:/Program Files (x86)/Windows Kits/NETFXSDK/4.8/Include/um",
         //"-I${workspaceFolder}/third_party/include" // 第三方依赖的头文件目录
     ]
 }
+// C_cpp_prop file back up
+// {
+//     "configurations": [
+//         {
+//             "name": "Win32",
+//             "includePath": [
+//                 "${workspaceFolder}/**"
+//             ],
+//             "defines": [
+//                 "_DEBUG",
+//                 "UNICODE",
+//                 "_UNICODE"
+//             ],
+//             "compilerPath": "C:\\office_software\\mingw64\\bin\\clang.exe",
+//             "cStandard": "c17",
+//             "cppStandard": "gnu++17",
+//             "intelliSenseMode": "windows-clang-x64"
+//         }
+//     ],
+//     "version": 4
+// }
