--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -183,6 +183,7 @@ MESSAGE( STATUS "CMAKE_RANLIB: " ${CMAKE_RANLIB} )
 project (GameEngineFromScrath)
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
 IF(${UNIX})
     include_directories("${PROJECT_SOURCE_DIR}/Platform/Linux")
@@ -192,4 +193,4 @@ ENDIF(${UNIX})
 add_subdirectory(Framework)
 add_subdirectory(Platform)
 add_subdirectory(RHI)
-
+add_subdirectory(test)
