got problem with ispc make

--- a/Framework/GeomMath/ispc/CMakeLists.txt
+++ b/Framework/GeomMath/ispc/CMakeLists.txt
@@ -1,10 +1,10 @@
 set(FUNCTIONS CrossProduct DotProduct MulByElement Transpose Normalize
               Transform AddByElement SubByElement
         )
-
 foreach(FUNC IN LISTS FUNCTIONS)
     add_custom_command(OUTPUT ${FUNC}.o
-        COMMAND ${CMAKE_COMMAND} -E env "PATH=${ISPC_COMPILER_PATH}" ${ISPC_COMPILER} ${ISPC_OPTIONS} -o ${FUNC}.o -h ${GEOMMATH_LIB_HEADER_FOLDER}/${FUNC}.h --target=host ${CMAKE_CURRENT_SOURCE_DIR}/${FUNC}.ispc
+        COMMAND ${CMAKE_COMMAND} -E echo "Pre-build command"
+        COMMAND ${ISPC_COMPILER} ${ISPC_OPTIONS} -o ${FUNC}.o -I .. -h ${GEOMMATH_LIB_HEADER_FOLDER}/${FUNC}.h --target=host ${CMAKE_CURRENT_SOURCE_DIR}/${FUNC}.ispc
         MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/${FUNC}.ispc
         COMMENT "Building ${FUNC}"
         )
@@ -22,7 +22,6 @@ add_custom_command(OUTPUT ${GEOMMATH_LIB_FILE}
 add_custom_target(GeomMathLib
                    DEPENDS ${GEOMMATH_LIB_FILE}
         )
-
 
 # ispc --arch=x86-64 --target=host -o CrossProduct.o -I ./ -h ./include/CrossProduct.h ./ispc/CrossProduct.ispc
 # ispc --arch=x86-64 --target=host -o DotProduct.o -I ./ -h ./include/DotProduct.h ./ispc/DotProduct.ispc
