fix problem with setting project in win32

--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -178,11 +178,9 @@ MESSAGE( STATUS "CMAKE_RANLIB: " ${CMAKE_RANLIB} )
 
 #MESSAGE( STATUS ": " ${} )
 
+set(CMAKE_GENERATOR_PLATFORM Win32)
+
 # ------------------------- End of Generic CMake Variable Logging ------------------
-
-# identical with ispc flag
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --arch=x86-64 --target=host")
-
 project (GameEngineFromScrath)
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
