--- a/Platform/Windows/cmakelists.txt
+++ b/Platform/Windows/cmakelists.txt
@@ -5,11 +5,12 @@
 # # link_libraries(
 # #     C:/Program Files (x86)/Windows Kits/10/Lib/10.0.19041.0/um/x64
 # #     )
+# d3d
+add_library(WindowsApplication WindowsApplication.cpp)
+add_executable(MyGameEngineD3d12 D3d12Application.cpp)
+target_link_libraries(MyGameEngineD3d12 WindowsApplication Common D3dRHI d3d12 dxgi d3dcompiler)
 
-
-add_executable(MyGameEngineD3d12 WindowsApplication.cpp D3d12Application.cpp)
-target_link_libraries(MyGameEngineD3d12 Common D3dRHI d3d12 dxgi d3dcompiler)
-
+# opengl
 add_executable(MyGameEngineOpenGL 
     WindowsApplication.cpp 
     OpenGLApplication.cpp
@@ -17,3 +18,6 @@ add_executable(MyGameEngineOpenGL
     )
 target_link_libraries(MyGameEngineOpenGL Common OpenGLRHI opengl32)
 target_include_directories(MyGameEngineOpenGL PRIVATE "${PROJECT_SOURCE_DIR}/External/GL/include")
+
+
+add_subdirectory(test)
