--- a/RHI/CMakeLists.txt
+++ b/RHI/CMakeLists.txt
@@ -4,4 +4,5 @@ add_subdirectory(OpenGL)
 IF(${WIN32})
     # Windows specific code
     add_subdirectory(D3d)
+    add_subdirectory(D2d)
 ENDIF(${WIN32})
