--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -185,6 +185,7 @@ project (GameEngineFromScrath)
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/Codec")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
 IF(${UNIX})
     include_directories("${PROJECT_SOURCE_DIR}/Platform/Linux")
