--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -1,37 +1,64 @@
-cmake_minimum_required (VERSION 3.1)
+cmake_minimum_required (VERSION 3.1) 
+project (GameEngineFromScrath)
 
-# CMAKE build instructions need be specify before project name
+set (CMAKE_C_STANDARD 99)
+set (CMAKE_CXX_STANDARD 11)
+
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Platform")
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/External/src/crossguid/cmake")
+include(TargetArchDetect)
+
+target_architecture(TARGET_ARCH)
+
+if((TARGET_ARCH MATCHES "x86_64" OR TARGET_ARCH MATCHES "ia64") AND NOT OF_32BIT)
+        set(ARCH_BIT 64)
+else()
+        set(ARCH_BIT 32)
+endif()
+
+include_directories("${PROJECT_SOURCE_DIR}")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/Parser")
+include_directories("${PROJECT_SOURCE_DIR}/RHI")
 IF(${UNIX})
-    set (CMAKE_C_COMPILER               "clang")
-    set (CMAKE_C_FLAGS_DEBUG            "-g")
-    set (CMAKE_C_FLAGS_RELWITHDEBINFO   "-O2 -g")
-    set (CMAKE_CXX_COMPILER             "clang++")
-    set (CMAKE_CXX_FLAGS                "-Wall")
-    set (CMAKE_CXX_FLAGS_DEBUG          "-g")
-    set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
-    set (CMAKE_CXX_STANDARD 11)
+    set(MYGE_TARGET_PLATFORM "Linux")
 ELSEIF(${WIN32})
-    # Windows specific code
-    set (CMAKE_C_COMPILER               "clang-cl")
-    set (CMAKE_C_FLAGS_DEBUG            "/Debug /Zi")
-    set (CMAKE_C_FLAGS_RELWITHDEBINFO   "-O2 /Debug")
-    set (CMAKE_CXX_COMPILER             "clang-cl")
-    set (CMAKE_CXX_FLAGS_DEBUG          "/Debug /Zi")
-    set (CMAKE_CXX_FLAGS                "-Wall -Xclang -std=gnu++14")
-    set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 /Debug")
+    set(MYGE_TARGET_PLATFORM "Windows")
 ENDIF(${UNIX})
-set (CMAKE_C_FLAGS                  "-Wall")
-set (CMAKE_C_FLAGS_MINSIZEREL       "-Os -DNDEBUG")
-set (CMAKE_C_FLAGS_RELEASE          "-O4 -DNDEBUG")
-set (CMAKE_C_STANDARD 11)
-set (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
-set (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
+include_directories("${PROJECT_SOURCE_DIR}/Platform/${MYGE_TARGET_PLATFORM}")
+set(MYGE_EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${MYGE_TARGET_PLATFORM}/)
+include_directories("${MYGE_EXTERNAL_ROOT}include")
+set(MYGE_EXTERNAL_LIBRARY_PATH ${MYGE_EXTERNAL_ROOT}lib/)
+include(CTest)
+include(CheckCXXSourceCompiles)
+include(PlatformDependencies)
+CHECK_CXX_SOURCE_COMPILES(
+"#include <memory>
 
+int main(int argc, char** argv)
+{
+    std::unique_ptr<int> my_int = std::make_unique<int>();
+    *my_int = 0;
+    return *my_int;
+}
+"
+ HAVE_MAKE_UNIQUE)
+configure_file(${PROJECT_SOURCE_DIR}/config.h.in ${PROJECT_SOURCE_DIR}/config.h)
+add_subdirectory(Framework)
+add_subdirectory(Platform)
+add_subdirectory(RHI)
+# add_subdirectory(m_test)
 
 # ------------------------- Begin Generic CMake Variable Logging ------------------
 
 # /*	C++ comment style not allowed	*/
 
+
+# current generator in use 
+MESSAGE( STATUS "CMAKE_GENERATOR:         " ${CMAKE_GENERATOR} )
 
 # if you are building in-source, this is the same as CMAKE_SOURCE_DIR, otherwise 
 # this is the top level directory of your build tree 
@@ -84,6 +111,20 @@ MESSAGE( STATUS "CMAKE_INCLUDE_PATH: " ${CMAKE_INCLUDE_PATH} )
 # this is used when searching for libraries e.g. using the FIND_LIBRARY() command.
 MESSAGE( STATUS "CMAKE_LIBRARY_PATH: " ${CMAKE_LIBRARY_PATH} )
 
+## HOST
+# the complete system name, e.g. "Linux-2.4.22", "FreeBSD-5.4-RELEASE" or "Windows 5.1" 
+MESSAGE( STATUS "CMAKE_HOST_SYSTEM: " ${CMAKE_HOST_SYSTEM} )
+
+# the short system name, e.g. "Linux", "FreeBSD" or "Windows"
+MESSAGE( STATUS "CMAKE_HOST_SYSTEM_NAME: " ${CMAKE_HOST_SYSTEM_NAME} )
+
+# only the version part of CMAKE_SYSTEM 
+MESSAGE( STATUS "CMAKE_HOST_SYSTEM_VERSION: " ${CMAKE_HOST_SYSTEM_VERSION} )
+
+# the processor name (e.g. "Intel(R) Pentium(R) M processor 2.00GHz") 
+MESSAGE( STATUS "CMAKE_HOST_SYSTEM_PROCESSOR: " ${CMAKE_HOST_SYSTEM_PROCESSOR} )
+
+## TARGET
 # the complete system name, e.g. "Linux-2.4.22", "FreeBSD-5.4-RELEASE" or "Windows 5.1" 
 MESSAGE( STATUS "CMAKE_SYSTEM: " ${CMAKE_SYSTEM} )
 
@@ -148,11 +189,18 @@ MESSAGE( STATUS "CMAKE_SUPPRESS_REGENERATION: " ${CMAKE_SUPPRESS_REGENERATION} )
 # But there are also two variables exactly for this purpose: 
 
 # the compiler flags for compiling C sources 
-MESSAGE( STATUS "CMAKE_C_FLAGS: " ${CMAKE_C_FLAGS} )
+MESSAGE( STATUS "CMAKE_C_FLAGS: "                   ${CMAKE_C_FLAGS} )
+MESSAGE( STATUS "CMAKE_C_FLAGS_DEBUG: "             ${CMAKE_C_FLAGS_DEBUG})
+MESSAGE( STATUS "CMAKE_C_FLAGS_RELEASE: "           ${CMAKE_C_FLAGS_RELEASE})
+MESSAGE( STATUS "CMAKE_C_FLAGS_RELWITHDEBINFO: "    ${CMAKE_C_FLAGS_RELWITHDEBINFO})
+MESSAGE( STATUS "CMAKE_C_FLAGS_MINSIZEREL: "        ${CMAKE_C_FLAGS_MINSIZEREL})
 
 # the compiler flags for compiling C++ sources 
-MESSAGE( STATUS "CMAKE_CXX_FLAGS: " ${CMAKE_CXX_FLAGS} )
-
+MESSAGE( STATUS "CMAKE_CXX_FLAGS: "                 ${CMAKE_CXX_FLAGS} )
+MESSAGE( STATUS "CMAKE_CXX_FLAGS_DEBUG: "           ${CMAKE_CXX_FLAGS_DEBUG} )
+MESSAGE( STATUS "CMAKE_CXX_FLAGS_RELEASE: "         ${CMAKE_CXX_FLAGS_RELEASE} )
+MESSAGE( STATUS "CMAKE_CXX_FLAGS_RELWITHDEBINFO: "  ${CMAKE_CXX_FLAGS_RELWITHDEBINFO} )
+MESSAGE( STATUS "CMAKE_CXX_FLAGS_MINSIZEREL: "      ${CMAKE_CXX_FLAGS_MINSIZEREL} )
 
 # Choose the type of build.  Example: SET(CMAKE_BUILD_TYPE Debug) 
 MESSAGE( STATUS "CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE} )
@@ -176,23 +224,11 @@ MESSAGE( STATUS "CMAKE_COMPILER_IS_GNUCXX : " ${CMAKE_COMPILER_IS_GNUCXX} )
 MESSAGE( STATUS "CMAKE_AR: " ${CMAKE_AR} )
 MESSAGE( STATUS "CMAKE_RANLIB: " ${CMAKE_RANLIB} )
 
+MESSAGE( STATUS "CMAKE_CROSSCOMPILING: " ${CMAKE_CROSSCOMPILING} )
+
+MESSAGE( STATUS "TARGET_ARCH: " ${TARGET_ARCH} )
+
+#
 #MESSAGE( STATUS ": " ${} )
 
-set(CMAKE_GENERATOR_PLATFORM Win32)
-
 # ------------------------- End of Generic CMake Variable Logging ------------------
-project (GameEngineFromScrath)
-include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
-include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
-include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
-include_directories("${PROJECT_SOURCE_DIR}/Framework/Codec")
-include_directories("${PROJECT_SOURCE_DIR}/RHI")
-IF(${UNIX})
-    include_directories("${PROJECT_SOURCE_DIR}/Platform/Linux")
-ELSEIF(${WIN32})
-    include_directories("${PROJECT_SOURCE_DIR}/Platform/Windows")
-ENDIF(${UNIX})
-add_subdirectory(Framework)
-add_subdirectory(Platform)
-add_subdirectory(RHI)
-add_subdirectory(m_test)
