--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,11 @@
-[submodule "ispc"]
-	path = External/src/ispc
-	url = https://github.com/moonflo/ispc
 [submodule "External/src/opengex"]
 	path = External/src/opengex
 	url = https://github.com/moonflo/OpenGEX
 
 
+[submodule "External/src/zlib"]
+	path = External/src/zlib
+	url = https://github.com/moonflo/zlib
+[submodule "External/src/ispc"]
+	path = External/src/ispc
+	url = https://github.com/moonflo/ispc
