checking cmake and file version

--- a/Framework/GeomMath/CMakeLists.txt
+++ b/Framework/GeomMath/CMakeLists.txt
@@ -2,12 +2,14 @@ IF(${WIN32})
         SET(GEOMMATH_LIB_FILE ${CMAKE_CURRENT_BINARY_DIR}/GeomMath.lib)
         SET(ISPC_COMPILER ispc.exe)
         # SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/External/ispc/Release/)
-        if($ENV{VSCMD_ARG_TGT_ARCH} MATCHES "x64")
-            SET(ISPC_OPTIONS --arch=x86-64)
-            SET(LIBRARIAN_COMMAND lib /MACHINE:X64 /OUT:${GEOMMATH_LIB_FILE})
+        if((TARGET_ARCH MATCHES "x86_64" OR TARGET_ARCH MATCHES "ia64") AND NOT OF_32BIT)
+                MESSAGE( STATUS "[INFO] BUILD ISPC CODE WITH X86-64")
+                SET(ISPC_OPTIONS --arch=x86-64)
+                SET(LIBRARIAN_COMMAND lib /MACHINE:X64 /OUT:${GEOMMATH_LIB_FILE})
         else()
-            SET(ISPC_OPTIONS --arch=x86)
-            SET(LIBRARIAN_COMMAND lib /MACHINE:X86 /OUT:${GEOMMATH_LIB_FILE})
+                MESSAGE( STATUS "[INFO] BUILD ISPC CODE WITH X86")
+                SET(ISPC_OPTIONS --arch=x86)
+                SET(LIBRARIAN_COMMAND lib /MACHINE:X86 /OUT:${GEOMMATH_LIB_FILE})
         endif()
 ELSE()
         SET(GEOMMATH_LIB_FILE ${CMAKE_CURRENT_BINARY_DIR}/libGeomMath.a)
