--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required (VERSION 3.1) 
+
+
 project (GameEngineFromScrath)
 
 set (CMAKE_C_STANDARD 99)
@@ -10,7 +12,7 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/External/src/crossguid/cmak
 include(TargetArchDetect)
 
 target_architecture(TARGET_ARCH)
-
+MESSAGE( STATUS "TARGET_ARCH:         " ${TARGET_ARCH} )
 if((TARGET_ARCH MATCHES "x86_64" OR TARGET_ARCH MATCHES "ia64") AND NOT OF_32BIT)
         set(ARCH_BIT 64)
 else()
