--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required (VERSION 3.1)
 project (GameEngineFromScrath)
 
 set (CMAKE_C_STANDARD 99)
-set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_STANDARD 17)
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Platform")
@@ -33,6 +33,8 @@ ENDIF(${UNIX})
 include_directories("${PROJECT_SOURCE_DIR}/Platform/${MYGE_TARGET_PLATFORM}")
 set(MYGE_EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${MYGE_TARGET_PLATFORM}/)
 include_directories("${MYGE_EXTERNAL_ROOT}include")
+include_directories("${MYGE_EXTERNAL_ROOT}include/libpng16")
+include_directories("${MYGE_EXTERNAL_ROOT}include/crossguid")
 set(MYGE_EXTERNAL_LIBRARY_PATH ${MYGE_EXTERNAL_ROOT}lib/)
 include(CTest)
 include(CheckCXXSourceCompiles)
@@ -52,7 +54,7 @@ configure_file(${PROJECT_SOURCE_DIR}/config.h.in ${PROJECT_SOURCE_DIR}/config.h)
 add_subdirectory(Framework)
 add_subdirectory(Platform)
 add_subdirectory(RHI)
-# add_subdirectory(m_test)
+add_subdirectory(m_test)
 
 # ------------------------- Begin Generic CMake Variable Logging ------------------
 
