--- a/Framework/Common/cmakelists.txt
+++ b/Framework/Common/cmakelists.txt
@@ -10,7 +10,7 @@ main.cpp
 )
 
 target_link_libraries(Common GeomMath)
-find_library(XG_LIBRARY xg PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
+find_library(XG_LIBRARY crossguid-dgb PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
 find_library(OPENDDL_LIBRARY OpenDDL PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
 find_library(OPENGEX_LIBRARY OpenGEX PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
 
