--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ build*/
 /External/src/glad/src/glad.c
 /External/src/glad/src/glad_glx.c
 /External/src/glad/src/glad_wgl.c
+External/src/opengex-3/
