--- a/Framework/Common/cmakelists.txt
+++ b/Framework/Common/cmakelists.txt
@@ -6,13 +6,13 @@ GraphicsManager.cpp
 Image.cpp
 MemoryManager.cpp
 SceneManager.cpp
+SceneObject.cpp
+SceneParser.cpp
 main.cpp
 )
 
 target_link_libraries(Common GeomMath)
-find_library(XG_LIBRARY crossguid-dgb PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
-find_library(OPENDDL_LIBRARY OpenDDL PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
-find_library(OPENGEX_LIBRARY OpenGEX PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
+
 
 if(WIN32)
 message(STATUS "[INFO] Framework/Common/cmake: We using WIN32.")
