--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -19,23 +19,33 @@ else()
         set(ARCH_BIT 32)
 endif()
 
+
+# INCLUDE all package
 include_directories("${PROJECT_SOURCE_DIR}")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Parser")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
+include_directories("${PROJECT_SOURCE_DIR}/Platform/Empty")
 IF(${UNIX})
     set(MYGE_TARGET_PLATFORM "Linux")
 ELSEIF(${WIN32})
     set(MYGE_TARGET_PLATFORM "Windows")
 ENDIF(${UNIX})
 include_directories("${PROJECT_SOURCE_DIR}/Platform/${MYGE_TARGET_PLATFORM}")
+
 set(MYGE_EXTERNAL_ROOT ${PROJECT_SOURCE_DIR}/External/${MYGE_TARGET_PLATFORM}/)
 include_directories("${MYGE_EXTERNAL_ROOT}include")
 include_directories("${MYGE_EXTERNAL_ROOT}include/libpng16")
 include_directories("${MYGE_EXTERNAL_ROOT}include/crossguid")
+
 set(MYGE_EXTERNAL_LIBRARY_PATH ${MYGE_EXTERNAL_ROOT}lib/)
+find_library(OPENDDL_LIBRARY OpenDDL PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
+find_library(OPENGEX_LIBRARY OpenGEX PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
+find_library(XG_LIBRARY crossguid-dgb PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
+
+
 include(CTest)
 include(CheckCXXSourceCompiles)
 include(PlatformDependencies)
