--- a/Framework/Common/cmakelists.txt
+++ b/Framework/Common/cmakelists.txt
@@ -5,33 +5,31 @@ BaseApplication.cpp
 GraphicsManager.cpp
 Image.cpp
 MemoryManager.cpp
+Scene.cpp
 SceneManager.cpp
 SceneObject.cpp
-Scene.cpp
 main.cpp
 )
-
 target_link_libraries(Common GeomMath)
 
-
 if(WIN32)
-message(STATUS "[INFO] Framework/Common/cmake: We using WIN32.")
     add_definitions(-DGUID_WINDOWS)
 elseif(APPLE)
-    find_library(CFLIB CoreFoundation)
-    target_link_libraries(Common ${CFLIB})
     add_definitions(-DGUID_CFUUID)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
 elseif(ANDROID)
     target_compile_definitions(Common PRIVATE GUID_ANDROID)
-else()
+elseif(ORBIS)
+    # nothing here
+else(WIN32)
     find_package(Libuuid REQUIRED)
     if (NOT LIBUUID_FOUND)
         message(FATAL_ERROR
             "You might need to run 'sudo apt-get install uuid-dev' or similar")
     endif()
     include_directories(${LIBUUID_INCLUDE_DIR})
-    target_link_libraries(Common ${LIBUUID_LIBRARY})
     add_definitions(-DGUID_LIBUUID)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
 endif()
+
+
