--- a/Framework/Common/cmakelists.txt
+++ b/Framework/Common/cmakelists.txt
@@ -3,6 +3,7 @@ Allocator.cpp
 AssetLoader.cpp
 BaseApplication.cpp
 GraphicsManager.cpp
+InputManager.cpp
 Image.cpp
 MemoryManager.cpp
 Scene.cpp
@@ -31,5 +32,3 @@ else(WIN32)
     add_definitions(-DGUID_LIBUUID)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
 endif()
-
-
