--- a/Platform/Windows/cmakelists.txt
+++ b/Platform/Windows/cmakelists.txt
@@ -22,9 +22,9 @@ target_link_libraries(MyGameEngineOpenGL WindowsApplication Common  ${OPENGEX_LI
 target_include_directories(MyGameEngineOpenGL PRIVATE "${PROJECT_SOURCE_DIR}/External/src/glad/include")
 __add_xg_platform_dependencies(MyGameEngineOpenGL)
 
-add_custom_command(TARGET MyGameEngineOpenGL POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${PROJECT_SOURCE_DIR}/External/Windows/bin/zlib.dll"
-        $<TARGET_FILE_DIR:MyGameEngineOpenGL>)
+# add_custom_command(TARGET MyGameEngineOpenGL POST_BUILD
+#     COMMAND ${CMAKE_COMMAND} -E copy_if_different
+#         "${PROJECT_SOURCE_DIR}/External/Windows/bin/zlib.dll"
+#         $<TARGET_FILE_DIR:MyGameEngineOpenGL>)
 
 add_subdirectory(test)
