--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -12,22 +12,22 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/External/src/crossguid/cmak
 include(TargetArchDetect)
 
 target_architecture(TARGET_ARCH)
-MESSAGE( STATUS "TARGET_ARCH:         " ${TARGET_ARCH} )
 if((TARGET_ARCH MATCHES "x86_64" OR TARGET_ARCH MATCHES "ia64") AND NOT OF_32BIT)
         set(ARCH_BIT 64)
 else()
         set(ARCH_BIT 32)
 endif()
+MESSAGE( STATUS "TARGET_ARCH:         " ${TARGET_ARCH})
 
 
 # INCLUDE all package
-include_directories("${PROJECT_SOURCE_DIR}")
+include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath/include")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Common")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/GeomMath")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Interface")
 include_directories("${PROJECT_SOURCE_DIR}/Framework/Parser")
 include_directories("${PROJECT_SOURCE_DIR}/RHI")
-include_directories("${PROJECT_SOURCE_DIR}/Platform/Empty")
+include_directories("${PROJECT_SOURCE_DIR}/")
 IF(${UNIX})
     set(MYGE_TARGET_PLATFORM "Linux")
 ELSEIF(${WIN32})
@@ -44,11 +44,12 @@ set(MYGE_EXTERNAL_LIBRARY_PATH ${MYGE_EXTERNAL_ROOT}lib/)
 find_library(OPENDDL_LIBRARY OpenDDL PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
 find_library(OPENGEX_LIBRARY OpenGEX PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
 find_library(XG_LIBRARY crossguid-dgb PATHS ${MYGE_EXTERNAL_LIBRARY_PATH})
-
+find_library(ZLIB_LIBRARY NAMES zlibd PATHS ${MYGE_EXTERNAL_LIBRARY_PATH} NO_CMAKE_FIND_ROOT_PATH NO_SYSTEM_ENVIRONMENT_PATH)
 
 include(CTest)
 include(CheckCXXSourceCompiles)
 include(PlatformDependencies)
+
 CHECK_CXX_SOURCE_COMPILES(
 "#include <memory>
 
@@ -60,6 +61,19 @@ int main(int argc, char** argv)
 }
 "
  HAVE_MAKE_UNIQUE)
+
+CHECK_CXX_SOURCE_COMPILES(
+"#include <algorithm>
+
+int main(int argc, char** argv)
+{
+    int result = -1;
+    result = std::clamp(result, 0, 1);
+    return result;
+}
+"
+ HAVE_CLAMP)
+
 configure_file(${PROJECT_SOURCE_DIR}/config.h.in ${PROJECT_SOURCE_DIR}/config.h)
 add_subdirectory(Framework)
 add_subdirectory(Platform)
